Update CORS configuration to allow requests from Vercel deployment